<?xml version="1.0" encoding="utf-8"?>

<!--
    strings.xml

    TeamLead application string definitions.

    @author James Williamson
-->

<resources>

    <!-- Application information -->
    <string name="app_name">TeamLead</string>
    <string name="app_author">James Williamson</string>
    <string name="app_version">0.6.0</string>
    <string name="app_url">github.com/JWilliamson45/TeamLead</string>

    <!-- ContextSwitchActivity -->
    <string name="context_switch_activity_title">TeamLead</string>
    <string name="add_task_label">Add</string>
    <string name="end_workday_label">End</string>
    <string name="task_context_menu_header_suffix">Task Options</string>
    <string name="reset_task_data_dialog_title">Reset Workday Data?</string>
    <string name="reset_task_data_dialog_message">This will reset all task timing data.</string>
    <string name="ok_button_label">OK</string>
    <string name="cancel_button_label">Cancel</string>

    <!-- AddNewTaskActivity -->
    <string name="add_new_task_activity_title">Create Task</string>
    <string name="enter_task_name_label">Enter task name:</string>
    <string name="enter_task_limit_label">Set optional task time limit:</string>
    <string name="hours_picker_label">Hours</string>
    <string name="minutes_picker_label">Minutes</string>
    <string name="seconds_picker_label">Seconds</string>
    <string name="enter_task_color_label">Choose task button color:</string>
    <string name="red_picker_label">Red</string>
    <string name="green_picker_label">Green</string>
    <string name="blue_picker_label">Blue</string>
    <string name="alpha_picker_label">Alpha</string>
    <string name="add_button_label">Add</string>
    <string name="invalid_task_dialog_title">Invalid Task Name</string>
    <string name="invalid_task_name_zero_dialog_msg">You must enter a valid task name.</string>
    <string name="invalid_task_name_length_dialog_msg">A task name cannot be longer than %1$d characters.</string>
    <string name="invalid_task_duplicate_dialog_msg">A task with this name has already been added.</string>

    <!-- TaskLogActivity -->
    <string name="task_log_activity_title">Task Log</string>
    <string name="task_log_header">User task log:</string>
    <string name="task_log_empty">(Logged task iterations will be shown here)</string>

    <!-- WorkdaySummaryActivity -->
    <string name="workday_summary_activity_title">Workday Summary</string>

    <!-- SettingsActivity -->
    <string name="settings_activity_title">Settings</string>
    <string name="pref_tile_color_key">pref_taskTileColor</string>
    <string name="pref_tile_color_title">Task Tile Color</string>
    <string name="pref_tile_color_summary">Change the color of the task tiles"</string>
    <string name="pref_tile_color_default">Blue</string>
    <string name="pref_tile_refresh_key">pref_taskTileRefresh</string>
    <string name="pref_tile_refresh_title">Task Tile Refresh</string>
    <string name="pref_tile_refresh_summary">Set the task UI refresh interval</string>
    <string name="pref_tile_refresh_default">100ms</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="Color">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="ColorAlias">
        <item>"color-BLUE"</item>
        <item>"color-GREEN"</item>
        <item>"color-RED"</item>
        <item>"color-YELLOW"</item>
    </string-array>

    <string-array name="Refresh">
        <item>100 milliseconds</item>
        <item>500 milliseconds</item>
        <item>1 second</item>
        <item>5 seconds</item>
    </string-array>

    <string-array name="RefreshAlias">
        <item>refresh-100ms</item>
        <item>refresh-500ms</item>
        <item>refresh-1s</item>
        <item>refresh-5s</item>
    </string-array>

    <!-- Options menu -->
    <string name="contextswitch_menu_settings_title">Settings</string>
    <string name="contextswitch_menu_reset_title">Reset Workday</string>
    <string name="contextswitch_menu_task_log_title">View Task Log</string>
    <string name="contextswitch_menu_about_title">About</string>

    <!-- Task button context menu -->
    <string name="task_context_menu_delete_title">Delete</string>
    <string name="task_context_menu_edit_title">Edit</string>

    <!-- AboutDialog -->
    <string name="about_dialog_title">About TeamLead</string>
    <string name="about_dialog_author">Written by</string>
    <string name="about_dialog_version">Version</string>

    <!-- UnsupportedFunctionDialog -->
    <string name="invalid_function_dialog_title">Unsupported Function</string>
    <string name="invalid_function_dialog_msg">This functionality is not supported in this version.</string>

    <!-- File I/O -->
    <string name="completed_workday_file_prefix">TL_Workday_</string>
    <string name="active_workday_file_name">TL_Workday_Active</string>
</resources>
