<?xml version="1.0" encoding="utf-8"?>

<!--
    preferences.xml

    Stores user preferences for the TeamLead application.

    @author James Williamson
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_tile_color_key"
        android:title="@string/pref_tile_color_title"
        android:summary="@string/pref_tile_color_summary"
        android:defaultValue="@string/pref_tile_color_blue"
        android:enabled="true"
        android:persistent="true"
        android:entries="@array/Color"
        android:entryValues="@array/ColorAlias"/>
    <ListPreference
        android:key="@string/pref_tile_refresh_key"
        android:title="@string/pref_tile_refresh_title"
        android:summary="@string/pref_tile_refresh_summary"
        android:defaultValue="pref_tile_refresh_quarter"
        android:enabled="true"
        android:persistent="true"
        android:entries="@array/Refresh"
        android:entryValues="@array/RefreshAlias"/>
</PreferenceScreen>